# trendscout

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT_REPORT.md  README.md  USER_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci_cd.yml
src/scripts/: api-entrypoint.sh  ollama-entrypoint.sh  wait-for-services.sh
src/trendscout/: main.py  worker.py
src/trendscout/agents/: base.py  content_generator.py  crew_defs.py  scheduler.py  trend_analyzer.py
src/trendscout/api/: __init__.py  schemas.py
src/trendscout/api/api_v1/: api.py
src/trendscout/api/endpoints/: auth.py  health.py  tasks.py  users.py
src/trendscout/core/: config.py  logging.py  ollama.py  queue.py  security.py
src/trendscout/db/: base_class.py  init_db.py  session.py
src/trendscout/db/migrations/: env.py
src/trendscout/models/: __init__.py  task.py  user.py
src/trendscout/static/: index.html  script.js  style.css
tests/: conftest.py
tests/agents/: test_base.py  test_content_generator.py  test_scheduler.py  test_trend_analyzer.py
tests/api/endpoints/: test_auth.py  test_health.py  test_tasks.py  test_users.py
tests/core/: test_logging.py
