[tool.poetry]
name = "trendscout"
version = "1.0.0"
description = "AI-powered trend analysis and content generation system"
authors = ["ETIC Student"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
sqlalchemy = "*"
psycopg2-binary = "*"
python-jose = {extras = ["cryptography"], version = "*"}
passlib = {extras = ["bcrypt"], version = "*"}
python-multipart = "*"
redis = "*"
pydantic = "*"
python-dotenv = "*"
alembic = "*"
httpx = "*"
python-json-logger = "*"
pydantic-settings = "*"
tenacity = "*"
email-validator = "*"
crewai = "*"
crewai-tools = "*"
langchain-community = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
pre-commit = "*"
httpx = "*" # You have httpx in main dependencies and dev, consider if needed in both
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
# target-version = ['py311'] # Optional, but good practice

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88 # Matches black

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["crewai.*"]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503,E501"